Fixing gap at header
Currently testing out the working of margins

--- a/style.css
+++ b/style.css
@@ -118,4 +118,5 @@ navbar{
 img {
 	max-width: 100%;
 	height: auto;
+	margin-bottom:0px;
 }
